[package]
name = "rs_shellcode"
version = "0.1.0"
authors = ["b1tg <b1tg@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { package = "rs_shellcode_bindings", path = "bindings" }
clap = "3.0.0-beta.2"